--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,9 +1,6 @@
-/* common vars added */
 :root {
     --white: #ffffff;
-    --blue: #616ec8;
     --red: #912c00;
-    --green: #095e18bc;
   }
 
 * {
@@ -14,6 +11,10 @@
 
 body {
     background-color: var(--white);
+    margin: 0;
+    flex-direction: column;
+    min-height: 100vh;
+    justify-content: flex-start;
 }
 
 header {
@@ -29,33 +30,31 @@ header h1 {
     font-family: sans-serif;
 }
 
-header nav {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
+nav {
+    display: flex;
+    justify-content: flex-end;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
+    background-color:  var(--red);
 }
 
-header nav ul {
-    list-style-type: none;
-}
-
-header nav ul li {
-    display: inline-block;
-    margin-left: 25px;
-}
-
-a {
+nav a {
     color: var(--white);
+    padding: 14px 20px;
     text-decoration: none;
-}
+    text-align: center;
+  }
 
 .container {
     position: relative;
     text-align: center;
     margin-bottom: 25px;
   }
+
+.container a {
+    color: var(--white);
+    text-decoration: none;
+}
 
 .bottom-center {
     position: absolute;
@@ -148,4 +147,67 @@ footer {
 footer h2 {
     font-size: 20px;
     margin-bottom: 10px;
+}
+
+@media screen and (max-width: 1060px) {
+    .content section{
+        font-size: 25px;
+      }
+    .work div {
+        font-size: 18px;
+      }
+    .content h2, .work h1,  
+    .work h3 {
+        font-size: 25px;
+      }
+}
+
+@media screen and (max-width: 806px) {
+    .content,
+    .work {
+        width: 100%;
+        margin: 0px;
+    }
+    .bottom-center {
+        font-size: 20px;
+      }
+    .work img {
+        max-height: 200px;
+    }
+    .work div {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 515px) {
+    .content img {
+        max-height: 150px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    header h1 {
+        font-size: 30px;
+    }
+    nav {
+        font-size: 15px;
+    }
+    .bottom-center {
+        font-size: 15px;
+      }
+    .content section {
+    font-size: 12px;
+      }
+    .work div {
+        font-size: 12px;
+      }
+    .content h2, .work h1,  
+    .work h3 {
+        font-size: 15px;
+      }
+    .work img {
+        display: block;
+        margin: 10px auto;
+        max-height: 100px;
+        max-width: 100%;
 }
