--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -20,6 +20,7 @@ body {
 
 header {
     padding: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color:  var(--red);
     color: var(--white);
 }
@@ -27,13 +28,13 @@ header {
 header h1 {
     display: inline-block;
     font-size: 45px;
-    font-family:'Courier New', Courier, monospace;
+    font-family: sans-serif;
 }
 
 nav {
     display: flex;
     justify-content: flex-end;
-    font-family:'Courier New', Courier, monospace;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
     background-color:  var(--red);
 }
@@ -77,7 +78,7 @@ nav a {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family:'Courier New', Courier, monospace;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--red);
     color: var(--white);
     font-size: 30px;
@@ -109,7 +110,7 @@ nav a {
     display: inline-block;
     width: 20%;
     height: 100%;
-    font-family:'Courier New', Courier, monospace;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: var(--red);
 }
 .work h1 {
@@ -139,7 +140,7 @@ nav a {
 footer {
     padding: 30px;
     clear: both;
-    font-family:'Courier New', Courier, monospace;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
     background-color: var(--red);
 }
