--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -137,6 +137,14 @@ nav a {
     max-width: 100%;
 }
 
+.work img:hover {
+    bottom:-5px;
+    right:-5px;
+    top: -5px;
+    left: -5px; 
+    border: var(--white) solid 5px;
+}
+
 footer {
     padding: 30px;
     clear: both;
