--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -10,6 +10,34 @@
     margin: 0;
 }
 
+.main-screen {
+    display: inline-block;
+}
+.JS-Project-Page {
+    display: none;
+}
+
+.EdTech-Project-Page {
+    display: none;
+}
+
+button {
+    cursor: pointer;
+    background-color: rgb(8, 133, 133);
+    border-radius: 15px;
+    padding: 5px;
+    border: 1px solid rgb(7, 0, 0);
+    margin-left: 7.5px;
+    margin-bottom: 5px;
+    margin-right: 7.5px;
+    width: fit-content;
+    height: fit-content;
+}
+
+button:focus {     
+    background-color:rgb(148, 154, 165);    
+}
+
 body {
     background-color: var(--white);
     margin: 0;
@@ -29,6 +57,16 @@ header h1 {
     display: inline-block;
     font-size: 45px;
     font-family: sans-serif;
+}
+
+.navDiv {
+    border: 8px solid rgb(8, 133, 133);
+    border-radius: 15px;
+    margin-bottom: 20px;
+    position:fixed;
+    top:0;
+    width:100%;
+    z-index:1;
 }
 
 nav {
@@ -74,6 +112,28 @@ nav a {
     float: right;
 }
 
+.work-project-aside {
+    margin-top: 50px;
+}
+
+.JS-Project-Page section:hover {
+    bottom:-5px;
+    right:-5px;
+    top: -5px;
+    left: -5px; 
+    border: rgb(8, 133, 133) solid 5px;
+    cursor: pointer;
+}
+
+.EdTech-Project-Page section:hover {
+    bottom:-5px;
+    right:-5px;
+    top: -5px;
+    left: -5px; 
+    border: rgb(8, 133, 133) solid 5px;
+    cursor: pointer;
+}
+
 .content section {
     margin-bottom: 20px;
     padding: 50px;
@@ -82,6 +142,10 @@ nav a {
     background-color: var(--red);
     color: var(--white);
     font-size: 30px;
+}
+
+section {
+    border-radius: 15px;
 }
 
 .content img {
@@ -143,6 +207,12 @@ nav a {
     top: -5px;
     left: -5px; 
     border: var(--white) solid 5px;
+    cursor: pointer;
+}
+
+aside {
+    margin-bottom: 20px;
+    border-radius: 15px;
 }
 
 footer {
@@ -151,6 +221,10 @@ footer {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
     background-color: var(--red);
+    border: 8px solid rgb(8, 133, 133);
+    border-radius: 15px;
+    margin-top: 20px;
+
 }
 
 footer h2 {
