--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -38,6 +38,15 @@ button:focus {
     background-color:rgb(148, 154, 165);    
 }
 
+button:hover {
+    bottom:-2px;
+    right:-2px;
+    top: -2px;
+    left: -2px; 
+    border: white solid 5px;
+    cursor: pointer;
+}
+
 body {
     background-color: var(--white);
     margin: 0;
@@ -104,6 +113,13 @@ nav a {
     font-size:40px;
     color: var(--white);
     font-weight: bold;
+}
+
+:target {
+    display: block;
+    position: relative;
+    top: -120px; 
+    visibility: hidden;
 }
 
 .content {
