--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -24,7 +24,7 @@
 button {
     cursor: pointer;
     background-color: rgb(8, 133, 133);
-    border-radius: 15px;
+    /* border-radius: 15px; */
     padding: 5px;
     border: 1px solid rgb(7, 0, 0);
     margin-top: 5px;
@@ -71,7 +71,7 @@ header h1 {
 
 .navDivHeader {
     border: 8px solid rgb(8, 133, 133);
-    border-radius: 5px;
+    /* border-radius: 5px; */
     /* position:fixed; */
     padding-top: 50px;
     width:100%;
@@ -80,7 +80,7 @@ header h1 {
 
 .navDiv {
     border: 8px solid rgb(8, 133, 133);
-    border-radius: 5px;
+    /* border-radius: 5px; */
     margin-bottom: 5px;
     position:fixed;
     top:0;
@@ -198,7 +198,7 @@ nav a {
     background-color: var(--red);
     color: var(--white);
     font-size: 30px;
-    border-radius: 15px;
+    /* border-radius: 15px; */
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -214,7 +214,7 @@ nav a {
 }
 
 section {
-    border-radius: 15px;
+    /* border-radius: 15px; */
 }
 
 .content img {
@@ -281,7 +281,7 @@ section {
 
 aside {
     margin-bottom: 20px;
-    border-radius: 15px;
+    /* border-radius: 15px; */
 }
 
 footer {
@@ -291,7 +291,7 @@ footer {
     text-align: center;
     background-color: var(--red);
     border: 8px solid rgb(8, 133, 133);
-    border-radius: 15px;
+    /* border-radius: 15px; */
     margin-top: 20px;
 
 }
